added e2e test cases

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
 
 <button (click)="switchLanguage('fr')">fr</button> -->
 <router-outlet></router-outlet>
+<!-- <app-progress-bar></app-progress-bar> -->
